<resources>
    <string name="app_name">Pets</string>
    <string name="title_home">Inicio</string>
    <string name="title_amigos">Amigos</string>
    <string name="title_notificaciones">Notificaciones</string>
    <string name="title_perfil">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="nav_buscar_friends">Buscar amigos</string>
    <string name="nav_amigos">Amigos</string>
    <string name="nav_tienda">Tienda</string>
    <string name="nav_mensajes">Mensajes</string>
    <string name="nav_settings">Preferencias</string>
    <string name="nav_logout">Cerrar sesion</string>
    <string name="email">Email..</string>
    <string name="contraseña">Contraseña..</string>
    <string name="Iniciar_sesion">Iniciar sesion</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="nav_new_post">Nueva publicacion</string>
    <string name="nav_perfil">Mi perfil</string>
    <string name="drawer_open">Abierto</string>
    <string name="drawer_close">Cerrado</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="title_activity_button_nav">ButtonNavActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="petsName">PETS</string>
    <string name="emailEditText">Email</string>
    <string name="imageView">Selecciona foto</string>
    <string name="descripcionfotos">Descripcion..</string>
    <string name="añadirFoto">Añadir Foto</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_crear_cuenta">Crear cuenta</string>
    <string name="title_add">Publicar</string>
    <string name="title_search">Buscar</string>
    <string name="person_profile_activity">Person profile</string>
    <string name="nav_adopcion">Adopcion</string>
    <string name="nav_home">Home</string>
    <string name="details_action_website">Website</string>
    <string name="details_website">Check the shelter website for more information.</string>
    <string name="details_email">Email del responsable del animal.</string>
    <string name="details_call">Llama para mas informacion</string>
    <string name="details_action_call">Llamada</string>
    <string name="details_action_email">Email</string>
    <string name="details_gender">Genero</string>
    <string name="details_age">Edad</string>
    <string name="details_male">Male</string>
    <string name="details_size">Size</string>
    <string name="details_location">Ubicacion</string>
    <string name="details_description">Descripcion</string>
    <string name="details_contact_info">Contactar </string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_add_dog_adopcion">Nueva Adopcion</string>
    <string name="description_location">Ubicación</string>
    <string name="nav_educacion">Educación Canina</string>
    <string name="title_activity_education">MainActivity</string>
    <string name="title_activity_education_kotlin">EducationKotlin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_education_dog">EducationDog</string>
</resources>
