<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_amigos"
        android:icon="@drawable/friends"
        android:title="@string/title_amigos" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notificaciones" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/profile"
        android:title="@string/title_perfil" />

</menu>
