<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CrearCuenta" android:background="@drawable/grad">

    <Button
            android:id="@+id/button_crear_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/add"
            android:text="@string/crear_usuario"
            android:layout_below="@+id/editText_confirmarContraseña" android:layout_alignParentStart="true"
            android:layout_centerHorizontal="false" android:layout_marginTop="25dp" android:layout_marginStart="134dp"/>

    <ImageView
            android:src="@mipmap/logo"
            android:layout_width="150dp"
            android:layout_height="150dp" android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true" android:layout_marginEnd="125dp" android:id="@+id/imageView"
            android:layout_marginTop="16dp" android:contentDescription="TODO"/>
    <TextView
            android:text="@string/petsName"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView" android:id="@+id/textView5"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="?android:attr/colorPressedHighlight" android:textStyle="bold|italic"
            android:fontFamily="sans-serif-smallcaps" android:textSize="30sp" android:layout_marginTop="-1dp"
            android:layout_alignParentEnd="true" android:layout_marginEnd="155dp"/>


    <EditText

            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:padding="10dp"
            android:id="@+id/registrar_email"
            android:layout_marginTop="14dp" android:hint="@string/emailEditText" android:layout_alignParentStart="true"
            android:layout_marginStart="30dp" android:layout_alignParentEnd="true" android:layout_marginEnd="29dp"
            android:drawableStart="@android:drawable/sym_action_email" android:layout_below="@+id/textView5"
            android:importantForAutofill="no" android:textColor="@android:color/black"/>

    <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:padding="10dp"
            android:layout_alignParentTop="true" android:id="@+id/registrar_contraseña"
            android:layout_marginTop="309dp" android:hint=" Contraseña" android:layout_alignParentStart="true"
            android:layout_marginStart="31dp" android:layout_alignParentEnd="true" android:layout_marginEnd="28dp"
            android:drawableLeft="@drawable/password" android:importantForAutofill="no"
            android:textColor="@android:color/black"/>
    <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:padding="10dp"
            android:layout_alignParentTop="true" android:id="@+id/editText_confirmarContraseña"
            android:layout_marginTop="384dp" android:hint="Confirmar contraseña" android:layout_alignParentStart="true"
            android:layout_marginStart="32dp" android:layout_alignParentEnd="true" android:layout_marginEnd="27dp"
            android:drawableLeft="@drawable/password" android:importantForAutofill="no"
            android:textColor="@android:color/black"/>
</RelativeLayout>