<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="horizontal"
    tools:context=".PetsLogin">


    <EditText
        android:id="@+id/editText_email"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="223dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="53dp" />

    <EditText
        android:id="@+id/contraseña"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="302dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="118dp" />


    <Button
        android:id="@+id/button_iniciar_sesion"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contraseña"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="27dp"
        android:onClick="iniciarSesion"
        android:text="@string/Iniciar_sesion"
        android:textAppearance="@style/TextAppearance.AppCompat"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="441dp" />

    <TextView
        android:id="@+id/textView_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText_email"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="181dp"
        android:onClick="CrearCuenta"
        android:text="No tienes una cuenta? Créala desde aqui."
        android:textSize="17sp" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="145dp"
        android:text="o Inicia sesión con" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="89dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/google_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="162dp"
        android:layout_marginTop="32dp"
        android:autoText="false"
        android:gravity="top"
        android:lineSpacingExtra="10sp"
        android:text="Bienvenido a PETS"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#00BFA5"
        android:textSize="24sp" />


</RelativeLayout>